--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 0;
+    padding: 115px 0 50px 0;
     color: white;
 }
 
