--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1vh 0;
+    position: fixed;
 }
 
 .logo{
@@ -109,8 +110,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 50px;
-    max-height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
 }
 
@@ -121,56 +122,21 @@
     cursor: pointer;
 }
 
+.menuItemLine{
+    width: 100%;
+    height: 1px;
+    background-color: rgb(194, 194, 194);
+    margin: 5px 0;
+}
+
 .logout{
-    background-color: rgb(223, 223, 223);
-    min-height: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    cursor: pointer;
-    padding: 15px 10px;
-}
-
-.logout_btn{
-    background-color: transparent;
-    height: 100%;
-    width: 100%;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border: none;
-    cursor: pointer;
-    transition: 0.5s;
-}
-
-.logout_btn:hover{
-    background-color: rgb(211, 210, 210);
-}
-
-.logouttrue{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    margin-top: 51px;
-    height: 101px;
-}
-
-.usertrue{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 50px;
-    max-height: 50px;
-    border-radius: 50%;
-    padding-bottom: 3px;
-}
-
-.usertrue img {
+    background-color: transparent;
     width: 100%;
     height: 100%;
-    border-radius: 100%;
     cursor: pointer;
+    display: flex;
+    justify-content: start;
+    font-size: 15px;
+    color: red;
 }
