--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -50,6 +50,7 @@
     text-transform: capitalize;
     height: 100%;
     align-items: center;
+    text-align: center;
 }
 
 .li li{
@@ -139,4 +140,24 @@
     justify-content: start;
     font-size: 15px;
     color: red;
+}
+
+.submit_btn li{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    color: black;
+}
+
+.admin a{
+    text-decoration: none;
+    color: black;
+    height: 100%;
+    padding: 0 0 0 10px;
+}
+
+@media (min-with: 1035px){
+    .submit_btn button{
+        width: 5%;
+    }
 }
