--- a/src/styles/Rent.css
+++ b/src/styles/Rent.css
@@ -24,6 +24,12 @@
     padding:0 0 15px 0;
     height: auto;
     text-align: center;
+    box-shadow: 10px 10px 20px rgb(77, 77, 77);
+    transition: 0.3s;
+}
+
+.card:hover{
+   transform: translateY(-20px);
 }
 
 .card iframe{
