--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -40,36 +40,48 @@
     height: 100%;
 }
 
+/* .home_right-animation{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
 .home_right img{
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     margin: 0 auto;
     position: absolute;
     display: flex;
-    justify-content: start;
     align-items: center;
+    justify-content: center;
 }
 
 .circleh{
     position: absolute;
     animation: circleh 1.5s alternate infinite;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
 }
 
 .circleho{
     position: relative;
     animation: circleho 1.5s alternate infinite;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
 }
 
 @keyframes circleh{
     from{
-        height: 190px;
-        width: 190px;
+        height: 150px;
+        width: 150px;
         border-radius: 50%;
         box-shadow: 10px 10px 10px inset rgb(150, 150, 150);
     }to{
-        height: 350px;
-        width: 350px;
+        height: 300px;
+        width: 300px;
         border-radius: 50%;
         box-shadow: 10px 5px 70px inset rgb(156, 156, 156);
         
@@ -83,8 +95,8 @@
         border-radius: 50%;
         box-shadow: 10px 10px 10px inset rgb(160, 160, 160);
     }to{
-        height: 350px;
-        width: 350px;
+        height: 300px;
+        width: 300px;
         border-radius: 50%;
         box-shadow: 10px 5px 70px inset rgb(160, 160, 160);
         
