--- a/src/styles/Rent.css
+++ b/src/styles/Rent.css
@@ -121,7 +121,7 @@ h3 span{
 
 
 .rentcardiconanimation{
-    animation: iconAnimation 3s alternate infinite;
+    animation: iconAnimation 1s alternate infinite;
     width: 15% !important;
     height: 100% !important;
     overflow: hidden;
@@ -135,8 +135,8 @@ h3 span{
     from{
         width: 20px;
         height: 20px;
-        box-shadow: 10px 10px 10px inset rgb(255, 57, 0, 1);
-        border-radius: 50%;
+        box-shadow: 10px 10px 10px inset  rgb(255, 149, 119);
+        border-radius: 10%;
     }to{
         width: 50px;
         height: 50px;
