--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -154,5 +154,6 @@
     text-decoration: none;
     color: black;
     height: 100%;
-    padding: 0 0 0 20px;
+    display: flex;
+    justify-content: start;
 }
