--- a/src/styles/Lease.css
+++ b/src/styles/Lease.css
@@ -1,6 +1,6 @@
 .Lease {
   width: 100%;
-  height: 70vh;
+  height: 94.5vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/OIP\ \(111\).jpg);
   padding: 100px 0 120px 0;
@@ -92,3 +92,34 @@ form {
   margin-right: 150px;
 }
 
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.heading{
+  text-align: center;
+}
+
+.phone-input-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgb(0,0,0,0.1);
+}
+
+.label{
+  margin-bottom: 10px;
+}
+
+.error-message{
+  color: red;
+  margin-top: 10px;
+  font-size: 14px;
+}
