--- a/src/styles/Lease.css
+++ b/src/styles/Lease.css
@@ -123,3 +123,9 @@ form {
   margin-top: 10px;
   font-size: 14px;
 }
+
+.successJs{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
