--- a/src/styles/Lease.css
+++ b/src/styles/Lease.css
@@ -127,5 +127,7 @@ form {
 .successJs{
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  bottom: 350px;
+  right: 3px;
+  position: absolute;
 }
