--- a/src/styles/Success.css
+++ b/src/styles/Success.css
@@ -1,4 +1,4 @@
-.Success{
+.success{
     background-color: white;
     height: 50px;
     width: 270px;
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 7px 20px;
-    animation: successAnimate 0.2s alternate-reverse;
+    animation: successAnimate 0.6s alternate-reverse;
 }
 
 .success-icon{
@@ -34,20 +34,20 @@
     width: 1px;
     height: 80%;
     background-color: grey;
-    margin-right: 210px;
+    margin-right: 190px;
     position: relative;
 }
 
 .success-text{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 25%;
+    justify-content: end;
+    width: 70%;
     padding-right: 70px;
     position: absolute;
     font-size: 20px;
     color: green;
-    animation: successAnimateText 0.4s alternate-reverse;
+    animation: successAnimateText 0.8s alternate-reverse;
 }
 
 .icons-success{
@@ -63,7 +63,7 @@
     left: 10px;
     position: relative;
     rotate: 10deg;
-    animation: successAnimation 0.5s alternate calc(2);
+    animation: successAnimation 0.9s alternate calc(2);
 }
 
 .icons-success i:nth-child(2){
@@ -71,7 +71,16 @@
     right: 10px;
     top: 3px;
     rotate: -10deg;
-    animation: successAnimation 0.5s alternate calc(2);
+    animation: successAnimation 0.9s alternate calc(2);
+}
+
+.x-icon{
+    position: relative;
+    color: grey;
+    bottom: 20px;
+    left: 270px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 @keyframes successAnimation{
