--- a/src/styles/Rent.css
+++ b/src/styles/Rent.css
@@ -65,8 +65,17 @@
     text-align: center;
 }
 
+.card-h2{
+    max-width: 90% !important;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+}
+
 .card h2{
     font-size: 20px;
+    width: 100%;
 }
 
 .rentcardline{
