--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,7 +3,7 @@
     background-color: rgb(235, 234, 230);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     color: black;
     padding: 130px 0 0 0;
@@ -18,8 +18,7 @@
     align-items: center;
     padding: 0 0 0 100px;
     height: 100%;
-    line-height: 130px;
-    width: 38%;
+    width: 50%;
 }
 
 .left h1{
@@ -27,6 +26,14 @@
     display: flex;
     align-items: center;
     width: 100%;
+}
+
+.left h1:nth-child(1){
+    padding-bottom: 25px;
+}
+
+.left h1:nth-child(2){
+    padding-top: 25px;
 }
 
 .left h1 span{
@@ -38,7 +45,7 @@
 .contact-line{
     background-color: grey;
     width: 1px;
-    height: 50%;
+    height: 60%;
     margin: auto 0;
 }
 
@@ -48,7 +55,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 100px 0 0;
-    width: 18%;
+    width: 30%;
     text-align: center;
 }
 
