--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,6 +1,6 @@
 .Header{
     background-color: burlywood;
-    height: 9vh;
+    height: 11vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -11,7 +11,7 @@
 }
 
 .logo{
-    width: 14.5%;
+    width: 17%;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -22,6 +22,9 @@
 
 .logo h2{
     color: black;
+    font-size: 25px;
+    font-weight: 700;
+    margin-top: 10px;
 }
 
 .logo a{
@@ -88,7 +91,7 @@
 }
 
 .submit_btn{
-    width: 10%;
+    width: 15%;
     padding: 0 30px 0 0;
     display: flex;
     align-items: center;
@@ -98,7 +101,7 @@
 .login_btn{
     background-color: transparent;
     border: 1px solid rgb(136, 136, 136);
-    padding: 10px 40px;
+    padding: 7px 40px;
     cursor: pointer;
     transition: 0.5s;
 }
