--- a/src/styles/Lease.css
+++ b/src/styles/Lease.css
@@ -1,6 +1,6 @@
 .Lease {
   width: 100%;
-  height: 94.5vh;
+  height: 105vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/OIP\ \(111\).jpg);
   padding: 100px 0 120px 0;
@@ -107,7 +107,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
+  width: 350px;
   padding: 20px;
   background-color: #f5f5f5;
   border-radius: 8px;
@@ -132,4 +132,9 @@ form {
   bottom: 350px;
   right: 3px;
   position: absolute;
+}
+
+.selects{
+  color: white;
+  border: white;
 }
