--- a/src/styles/Rent.css
+++ b/src/styles/Rent.css
@@ -14,15 +14,14 @@
 
 .card{
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 20px !important;
     width: 330px;
     margin: 50px 10px;
-    background-color: rgb(184, 180, 180);
+    background-color: rgb(184, 180, 180) !important;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding:0 0 15px 0;
-    height: auto;
     text-align: center;
     box-shadow: 10px 10px 20px rgb(77, 77, 77);
     transition: 0.3s;
@@ -35,30 +34,31 @@
 .card iframe{
     border-radius: 20px;
     width: 100%;
-    max-height: 300px;
+    max-height: 300px !important;
     border-radius: 20px 20px 0 0;
 }
 
-.Rent_text{
-    font-size: 30px;
+.Rent_text h1{
+    font-size: 50px;
     display: flex;
     justify-content: center;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .lineee{
     width: 70%;
     height: 1px;
     background-color: grey;
-    margin: 20px 0;
+    margin: 20px 0 20px 50px;
 }
 
 .card h1{
     text-transform: capitalize;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
+    color: rgb(36, 5, 5);
 }
 
 .card p{
@@ -79,10 +79,12 @@
 }
 
 .rentcardline{
-    width: 100%;
+    width: 90%;
+    display: flex;
+    justify-content: center;
     background-color: grey;
     height: 1px;
-    margin: 15px;
+    margin: 20px;
 }
 
 h3 span{
@@ -104,7 +106,7 @@ h3 span{
 
 .priceline{
     width: 1px;
-    height: 100%;
+    height: 30px;
     background-color: grey;
 }
 
@@ -114,15 +116,16 @@ h3 span{
 
 .rentcardicons{
     display: flex;
-    width: 50%;
+    width: 100%;
     justify-content: center;
+    margin: 0 auto;
 }
 
 .rentcardicons i{
     font-size: 25px;
     justify-content: center;
     background-color: transparent;
-    height: 100%;
+    height: 40px;
     width: 100%;
     display: flex;
     align-items: center;
