--- a/src/styles/Lease.css
+++ b/src/styles/Lease.css
@@ -1,9 +1,9 @@
 .Lease {
   width: 100%;
-  height: 105vh;
+  min-height: auto;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/OIP\ \(111\).jpg);
-  padding: 100px 0 120px 0;
+  padding: 40px 0 20px 0;
 }
 
 .adminPanel {
@@ -69,7 +69,8 @@ form {
 
 .input-field:nth-of-type(1):not(:placeholder-shown) + .input-label {
   color: rgb(216, 216, 216);
-  background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(../images/OIP\ \(111\).jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url(../images/OIP\ \(111\).jpg);
 }
 
 .input-field:focus {
@@ -92,18 +93,18 @@ form {
   margin-right: 150px;
 }
 
-.container{
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.heading{
+.heading {
   text-align: center;
 }
 
-.phone-input-container{
+.phone-input-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -111,20 +112,20 @@ form {
   padding: 20px;
   background-color: #f5f5f5;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgb(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgb(0, 0, 0, 0.1);
 }
 
-.label{
+.label {
   margin-bottom: 10px;
 }
 
-.error-message{
+.error-message {
   color: red;
   margin-top: 10px;
   font-size: 14px;
 }
 
-.successJs{
+.successJs {
   display: flex;
   justify-content: center;
   /* bottom: 490px;
@@ -134,7 +135,16 @@ form {
   position: absolute;
 }
 
-.selects{
+.selects {
   color: white;
   border: white;
+}
+
+.leaseLoading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(202, 201, 201);
 }
