--- a/src/styles/Rent.css
+++ b/src/styles/Rent.css
@@ -32,6 +32,13 @@
    transform: translateY(-20px);
 }
 
+.rentVideo{
+    border-radius: 20px;
+    width: 100%;
+    max-height: 300px !important;
+    border-radius: 20px 20px 0 0;
+}
+
 .card iframe{
     border-radius: 20px;
     width: 100%;
@@ -117,7 +124,7 @@ h3 span{
 
 .rentcardicons{
     display: flex;
-    width: 100%;
+    width: 80%;
     justify-content: center;
     margin: 0 auto;
 }
@@ -126,14 +133,14 @@ h3 span{
     font-size: 25px;
     justify-content: center;
     background-color: transparent;
-    height: 40px;
+    height: 30px;
     width: 100%;
     display: flex;
     align-items: center;
 }
 
 .rentcardiconanimation{
-    animation: iconAnimation 1s alternate infinite;
+    animation: iconAnimation 1s  linear infinite;
     width: 15% !important;
     height: 100% !important;
     overflow: hidden;
@@ -144,15 +151,56 @@ h3 span{
 }
 
 @keyframes iconAnimation{
-    from{
+    1%{
         width: 20px;
         height: 20px;
-        box-shadow: 10px 10px 10px inset  rgb(255, 149, 119);
-        border-radius: 50%;
-    }to{
-        width: 50px;
-        height: 50px;
-        box-shadow: -50px -50px 15px inset rgb(255, 57, 0, 1);
+        box-shadow: 0px 0px 15px rgb(238, 120, 88);
         border-radius: 50%;
     }
+    20%{
+        width: 26px;
+        height: 26px;
+        box-shadow: 0px 0px 25px rgb(255, 60, 0);
+        border-radius: 50%;
+    }
+    40%{
+        width: 32px;
+        height: 32px;
+        box-shadow: 0px 0px 35px rgb(153, 43, 6);
+        border-radius: 50%;
+    }
+    60%{
+        width: 38px;
+        height: 38px;
+        box-shadow: 0px 0px 45px rgb(153, 39, 2);
+        border-radius: 50%;
+    }
+    80%{
+        width: 44px;
+        height: 44px;
+        box-shadow: 0px 0px 55px rgb(187, 48, 1);
+        border-radius: 50%;
+    }
+    100%{
+        width: 50px;
+        height: 50px;
+        box-shadow: 0px 0px 65px rgb(177, 57, 0, 1);
+        border-radius: 50%;
+    }
+}
+
+.rentLoading{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.cardsAndLoading{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
