--- a/src/styles/Rent.css
+++ b/src/styles/Rent.css
@@ -17,11 +17,11 @@
     cursor: pointer;
     border-radius: 20px !important;
     width: 330px;
-    margin: 50px 10px;
+    margin: 42px 42px;
     background-color: rgb(184, 180, 180) !important;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
     padding:0 0 15px 0;
     text-align: center;
     box-shadow: 10px 10px 20px rgb(77, 77, 77);
@@ -84,6 +84,7 @@
 .card h2{
     font-size: 20px;
     width: 100%;
+    max-height: 19px;
 }
 
 .rentcardline{
