--- a/src/styles/Lease.css
+++ b/src/styles/Lease.css
@@ -1,6 +1,6 @@
 .Lease {
   width: 100%;
-  min-height: auto;
+  min-height: 135vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/OIP\ \(111\).jpg);
   padding: 40px 0 20px 0;
