--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -58,7 +58,7 @@
 .text{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 85%;
     justify-content: space-between;
     align-items: start;
     padding: 0 50px 0 0;
@@ -68,6 +68,7 @@
     font-weight: 900;
     font-size: 33px;
     line-height: 35px;
+    color: rgb(224, 224, 224);
 }
 
 .textt{
