--- a/client/src/styles/Rent.css
+++ b/client/src/styles/Rent.css
@@ -1,5 +1,5 @@
 .Rent{
-    background-color: rgb(165, 161, 161);
+    background-color: rgb(81, 114, 118);
     width: 100%;
     padding: 130px 0 20px  0;
     min-height: 100vh;
@@ -18,13 +18,13 @@
     border-radius: 20px !important;
     width: 330px;
     margin: 42px 42px;
-    background-color: rgb(184, 180, 180) !important;
+    background-color: rgb(247, 248, 230) !important;
     display: flex;
     flex-wrap: wrap;
     /* justify-content: center; */
-    padding:0 0 15px 0;
+    padding:0 0 15px 0 !important;
     text-align: center;
-    box-shadow: 10px 10px 20px rgb(77, 77, 77);
+    box-shadow: 10px 10px 50px rgb(77, 77, 77);
     transition: 0.3s;
 }
 
@@ -39,10 +39,17 @@
     border-radius: 20px 20px 0 0;
 }
 
-.card iframe{
+.card video{
     border-radius: 20px;
     width: 100%;
-    max-height: 300px !important;
+    max-height: 100% !important;
+    border-radius: 20px 20px 0 0;
+}
+
+.card img{
+    border-radius: 20px;
+    width: 100%;
+    height: 100% !important;
     border-radius: 20px 20px 0 0;
 }
 
