--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -76,3 +76,262 @@
     height: 71%;
     align-items: center;
 }
+
+@media(max-width: 1226px){
+    .text h1{
+        font-size: 28px;
+        line-height: 30px;
+    }
+}
+
+@media(max-width: 1184px){
+    .text h1{
+        font-size: 25px;
+        line-height: 30px;
+    }
+}
+
+@media(max-width: 1000px){
+    .text h1{
+        font-size: 23px;
+        line-height: 30px;
+    }
+}
+
+@media(max-width: 943px){
+    .text h1{
+        font-size: 20px;
+        line-height: 30px;
+    }
+}
+
+@media(max-width: 859px){
+    .text h1{
+        font-size: 18px;
+        line-height: 30px;
+    }
+}
+
+@media(max-width: 802px){
+    .text{
+        height: 77%;
+    }
+
+    .text h1{
+        font-size: 18px;
+        line-height: 30px;
+        padding-left: 10px;
+    }
+
+    .circle{
+        width: 60px;
+        height: 60px;
+    }
+
+    .linees{
+        width: 60px;
+    }
+
+    .line{
+    height: 1px;
+    width: 80px;
+    background-color: white;
+}
+}
+
+@media(max-width: 774px){
+    .text{
+        height: 75%;
+    }
+
+    .text h1{
+        font-size: 16px;
+        line-height: 25px;
+    }
+}
+
+@media(max-width: 712px){
+    .text h1{
+        font-size: 15px;
+        line-height: 25px;
+    }
+}
+
+@media(max-width: 688px){
+    .text{
+        height: 70%;
+    }
+    .text h1{
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    .circle{
+        width: 50px;
+        height: 50px;
+    }
+
+    .linees{
+        width: 50px;
+    }
+
+    .line{
+    height: 1px;
+    width: 70px;
+    background-color: white;
+}
+}
+
+@media(max-width: 668px){
+    .text{
+        height: 76%;
+    }
+
+    .text h1:nth-child(2){
+        padding-top: 11px;
+    }
+
+    .text h1:nth-child(1){
+        padding-top: 20px;
+    }
+}
+
+@media(max-width: 619px){
+    .text{
+        height: 76%;
+    }
+
+    .text h1:nth-child(2){
+        padding-top: 0px;
+    }
+
+    .text h1:nth-child(1){
+        padding-top:7px;
+    }
+}
+
+@media(max-width: 533px){
+    .text h1:nth-child(1){
+        margin-top: -10px;
+    }
+
+    .text h1:nth-child(2){
+        margin-top: -13px;
+    }
+}
+
+@media(max-width: 522px){
+    .text h1:nth-child(2){
+        margin-top: 0px;
+    }
+
+    .text h1:nth-child(3){
+        margin-bottom: -5px;
+    }   
+}
+
+@media(max-width: 463px){
+    .text h1{
+        font-size: 13px;
+    }
+}
+
+@media(max-width: 433px){
+    .text h1{
+        font-size: 12px;
+    }
+}
+
+@media(max-width: 418px){
+    .text h1:nth-child(2){
+        margin-top: 8px;
+    }
+
+    .text h1:nth-child(3){
+        margin-bottom: -13px;
+    }   
+}
+
+@media(max-width: 402px){
+    .circle{
+        width: 40px;
+        height: 40px;
+    }
+
+    .linees{
+        width: 40px;
+    }
+
+    .line{
+    height: 1px;
+    width: 60px;
+    background-color: white;
+}
+}
+
+@media(max-width: 363px){
+    .text h1{
+        font-size: 10px;
+    }
+}
+
+@media(max-width: 339px){
+    .text h1{
+        font-size: 9px;
+    }
+}
+
+@media(max-width: 328px){
+    .text h1{
+        font-size: 8px;
+    }
+}
+
+@media(max-width: 318px){
+    .text h1{
+        font-size: 8px;
+    }
+
+    .text h1:nth-child(1){
+        margin-top: -33px;
+    }
+}
+
+@media(max-width: 318px){
+    .text h1{
+        font-size: 7px;
+    }
+}
+
+@media(max-width: 300px){
+    .text{
+        height: 85%;
+    }
+    .text h1{
+        font-size: 13px;
+    }
+
+    .circle{
+        display: none;
+    }
+
+    .circle_line{
+        display: none;
+    }
+
+    .circles{
+        display: none;
+    }
+
+    .linees{
+        display: none;
+    }
+
+    .line{
+        display: none;
+    }
+
+    .lines{
+        display: none;
+    }
+}
