--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -7,7 +7,7 @@
     align-items: center;
     padding: 1vh 0;
     position: fixed;
-    z-index: 1;
+    z-index: 10000;
 }
 
 .logo{
@@ -306,4 +306,304 @@
     display: flex;
     justify-content: center;
     color: rgb(142, 142, 142);
+}
+
+.burger-wrapper {
+  display: none;
+  position: relative;
+}
+
+.burger {
+  width: 32px;
+  height: 24px;
+  background: none;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 0;
+}
+
+.burger span {
+  height: 3px;
+  width: 100%;
+  background: #111;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+.burger.active span:nth-child(1) {
+  transform: translateY(10px) rotate(45deg);
+}
+.burger.active span:nth-child(2) {
+  opacity: 0;
+}
+.burger.active span:nth-child(3) {
+  transform: translateY(-10px) rotate(-45deg);
+}
+
+.burger-dropdown {
+  position: absolute;
+  top: 40px;
+  right: -130px;
+  width: 220px;
+  background: #fff;
+  border-radius: 12px;
+  padding: 14px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  opacity: 0;
+  transform: translateY(-10px);
+  pointer-events: none;
+  transition: 0.25s;
+}
+
+.burger-dropdown.show {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+.menu-link {
+  text-decoration: none;
+  color: #111;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.menu-link::before {
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: transparent;
+  transition: 0.3s;
+}
+
+.menu-link.active::before {
+  background: #111;
+}
+
+@media(max-width: 1070px){
+    .menu li{
+        font-size: 13px;
+    }
+}
+
+@media(max-width: 1005px){
+    .menu li{
+        font-size: 12px;
+    }
+}
+
+@media(max-width: 980px){
+    .menu li{
+        font-size: 11px;
+    }
+
+    .logo h2{
+        font-size: 20px;
+    }
+
+    .logo img{
+        width: 35px;
+        height: 35px;
+    }
+
+    .submit_btn button{
+        padding: 7px 30px;
+    }
+}
+
+@media(max-width: 940px){
+    .submit_btn button{
+        padding: 7px 25px;
+    }
+}
+
+@media(max-width: 925px){
+    .submit_btn button{
+        padding: 7px 20px;
+    }
+}
+
+@media(max-width: 880px){
+    .submit_btn button{
+        padding: 7px 15px;
+    }
+}
+
+@media(max-width: 840px){
+    .submit_btn button{
+        padding: 7px 13px;
+    }
+}
+
+@media(max-width: 825px){
+    .submit_btn button{
+        padding: 7px 35px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: 100px;
+    }
+
+    .menu{
+        display: none;
+    }
+
+    .translate{
+        width: 10%;
+        margin-left: 150px;
+    }
+
+    .submit_btn{
+        width: 18%;
+    }
+}
+
+@media(max-width: 760px){
+    .translate{
+        width: 10%;
+        margin-left: 100px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: 80px;
+    }
+}
+
+@media(max-width: 688px){
+    .translate{
+        width: 10%;
+        margin-left: 80px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: 70px;
+    }
+}
+
+@media(max-width: 650px){
+    .translate{
+        width: 10%;
+        margin-left: 60px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: 50px;
+    }
+}
+
+@media(max-width: 605px){
+    .translate{
+        width: 10%;
+        margin-left: 30px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: 70px;
+    }
+
+    .submit_btn button{
+        padding: 7px 20px;
+    }
+
+    .burger-wrapper span{
+        height: 2px;
+    }
+}
+
+@media(max-width: 480px){
+    .translate{
+        width: 10%;
+        margin-left: 20px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: 50px;
+    }
+}
+
+@media(max-width: 450px){
+    .translate{
+        width: 10%;
+        margin-left: -10px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: 60px;
+    }
+}
+
+@media(max-width: 425px){
+    .logo h2{
+        display: none;
+    }
+
+    .logo img{
+        width: 40px;
+        height: 40px;
+    }
+
+    .translate{
+        width: 10%;
+        margin-left: 0px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: -30px;
+    }
+}
+
+@media(max-width: 350px){
+    .logo img{
+        width: 35px;
+        height: 35px;
+    }
+
+    .burger-wrapper span{
+        height: 1.5px;
+    }
+
+    .translate{
+        width: 10%;
+        margin-left: -10px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: -45px;
+    }
+}
+
+@media(max-width: 340px){
+    .submit_btn button{
+        padding: 7px 10px;
+    }
+}
+
+@media(max-width: 340px){
+    .translate{
+        width: 10%;
+        margin-left: -10px;
+    }
+
+    .burger-wrapper{
+        display: block;
+        margin-left: -25px;
+    }
 }
