--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,50 +1,50 @@
-.Home{
-    height: 100vh;
-    /* background-color: rgb(91, 154, 190); */
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(../images/ArSh.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 65px;
-    overflow: hidden;
-    
+.Home {
+  height: 100vh;
+  /* background-color: rgb(91, 154, 190); */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/ArSh.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 65px;
+  overflow: hidden;
 }
 
-.home_left{
-    width: 63%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.home_left {
+  width: 63%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.home_left h1{
-    font-size: 43px;
-    font-weight: 900;
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    justify-content: center;
-    width: 90.5%;
-    color: rgb(179, 173, 173);
-    padding: 0 0 200px 0;
+.home_left h1 {
+  font-size: 43px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  justify-content: center;
+  width: 90.5%;
+  color: rgb(179, 173, 173);
+  padding: 0 0 200px 0;
 }
 
-.home_left h1 span{
-    padding: 0 15px;
+.home_left h1 span {
+  padding: 0 15px;
 }
 
-.home_right{
-    width: 37%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    position: relative;
-    top: -100px;
-    left: 30px;
+.home_right {
+  width: 37%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+  top: -100px;
+  left: 30px;
 }
 
 /* .home_right-animation{
@@ -53,59 +53,359 @@
     justify-content: center;
 } */
 
-.home_right img{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin: 0 auto;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.home_right img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 0 auto;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.circleh{
+.circleh {
+  position: absolute;
+  animation: circleh 1.5s alternate infinite;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circleho {
+  position: relative;
+  animation: circleho 1.5s alternate infinite;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@keyframes circleh {
+  from {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    box-shadow: 10px 10px 10px inset rgb(150, 150, 150);
+  }
+  to {
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    box-shadow: 10px 5px 70px inset rgb(156, 156, 156);
+  }
+}
+
+@keyframes circleho {
+  from {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    box-shadow: 10px 10px 10px inset rgb(160, 160, 160);
+  }
+  to {
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    box-shadow: 10px 5px 70px inset rgb(160, 160, 160);
+  }
+}
+
+@media (max-width: 1300px){
+  .home_left h1{
+    font-size: 35px;
+    margin-left: -15px;
+  }
+
+  .home_right{
+    margin-left: -20px;
+  }
+}
+
+@media (max-width: 1126px) {
+  .home_left h1 {
+    font-size: 30px;
+  }
+
+  .home_right img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .circleh {
     position: absolute;
     animation: circleh 1.5s alternate infinite;
     display: flex;
     align-items: center;
     justify-content: center;
-}
+  }
 
-.circleho{
+  .circleho {
     position: relative;
     animation: circleho 1.5s alternate infinite;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  @keyframes circleh {
+    from {
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      box-shadow: 10px 10px 10px inset rgb(150, 150, 150);
+    }
+    to {
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      box-shadow: 10px 5px 70px inset rgb(156, 156, 156);
+    }
+  }
+
+  @keyframes circleho {
+    from {
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      box-shadow: 10px 10px 10px inset rgb(160, 160, 160);
+    }
+    to {
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      box-shadow: 10px 10px 10px inset rgb(160, 160, 160);
+    }
+  }
 }
 
-@keyframes circleh{
-    from{
-        height: 150px;
-        width: 150px;
-        border-radius: 50%;
-        box-shadow: 10px 10px 10px inset rgb(150, 150, 150);
-    }to{
-        height: 300px;
-        width: 300px;
-        border-radius: 50%;
-        box-shadow: 10px 5px 70px inset rgb(156, 156, 156);
-        
-    }
+@media(max-width: 950px){
+  .home_left h1 {
+    font-size: 25px;
+  }
 }
 
-@keyframes circleho{
-    from{
-        height: 50px;
-        width: 50px;
-        border-radius: 50%;
-        box-shadow: 10px 10px 10px inset rgb(160, 160, 160);
-    }to{
-        height: 300px;
-        width: 300px;
-        border-radius: 50%;
-        box-shadow: 10px 5px 70px inset rgb(160, 160, 160);
-        
+@media(max-width: 800px){
+  .home_left h1 {
+    font-size: 20px;
+  }
+
+  .home_right {
+    width: 50%;
+  }
+
+  .home_right img {
+    width: 110px;
+    height: 110px;
+  }
+
+  .circleh {
+    position: absolute;
+    animation: circleh 1.5s alternate infinite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .circleho {
+    position: relative;
+    animation: circleho 1.5s alternate infinite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @keyframes circleh {
+    from {
+      height: 60px;
+      width: 60px;
+      border-radius: 50%;
+      box-shadow: 10px 10px 10px inset rgb(150, 150, 150);
     }
+    to {
+      height: 160px;
+      width: 160px;
+      border-radius: 50%;
+      box-shadow: 10px 5px 70px inset rgb(156, 156, 156);
+    }
+  }
+
+  @keyframes circleho {
+    from {
+      height: 15px;
+      width: 15px;
+      border-radius: 50%;
+      box-shadow: 10px 10px 10px inset rgb(160, 160, 160);
+    }
+    to {
+      height: 160px;
+      width: 160px;
+      border-radius: 50%;
+      box-shadow: 10px 10px 10px inset rgb(160, 160, 160);
+    }
+  }
+}
+
+@media (max-width: 736px){
+  .home_left h1{
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 668px){
+  .Home{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+  }
+
+  .home_left{
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding-top: 180px;
+    padding-left: 50px;
+  }
+
+  .home_right{
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .home_left h1{
+    font-size: 30px;
+  }
+
+  .home_left h1 span {
+  padding: 0 0 0 15px;
+}
+}
+
+@media (max-width: 632px){
+  .home_left h1{
+    font-size: 25px;
+    margin-left: -15px;
+  }
+
+  .home_right{
+    margin-left: -20px;
+  }
+}
+
+@media (max-width: 616px){
+  .home_left h1{
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 616px){
+  .home_left h1{
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 538px){
+  .home_left h1{
+    font-size: 23px;
+  }
+}
+
+@media (max-width: 521px){
+  .home_left h1{
+    font-size: 23px;
+  }
+}
+
+@media (max-width: 500px){
+  .home_left h1{
+    font-size: 22px;
+    margin-left: -15px;
+  }
+
+  .home_right{
+    margin-left: -20px;
+  }
+}
+
+@media (max-width: 484px){
+  .home_left h1{
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 444px){
+  .home_left h1{
+    font-size: 17px;
+    margin-left: -20px;
+  }
+
+  .home_right{
+    margin-left: -25px;
+  }
+}
+
+@media (max-width: 428px){
+  .home_left h1{
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 407px){
+  .home_left h1{
+    font-size: 17px;
+    margin-left: -15px;
+  }
+
+  .home_right{
+    margin-left: -20px;
+  }
+}
+
+@media (max-width: 390px){
+  .home_left h1{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 369px){
+  .home_left h1{
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 350px){
+  .home_left h1{
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 312px){
+  .home_left h1{
+    font-size: 12px;
+    margin-left: -10px;
+  }
+
+  .home_right{
+    margin-left: -15px;
+  }
+}
+
+@media (max-width: 295px){
+  .home_left h1{
+    font-size: 12px;
+    margin-left: -15px;
+  }
+
+  .home_right{
+    margin-left: -20px;
+  }
 }
