--- a/client/src/styles/AboutUser.css
+++ b/client/src/styles/AboutUser.css
@@ -135,8 +135,15 @@ h1 {
     h1{font-size: 20px;}
     .infoRow{padding: 10px 15px;}
 }
+
 @media(max-width: 500px){
     .aboutUserCard{width: 95%;padding: 15px;}
     .infoRow h3{font-size: 13px;}
+    .userImage{width: 80px;height: 80px;}
+}
+
+@media(max-width: 320px){
+    .aboutUserCard{width: 95%;padding: 15px;}
+    .infoRow h3{font-size: 11px;}
     .userImage{width: 80px;height: 80px;}
 }
